# YFlow

./: .env.template  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  install.sh
admin-backend/: .env.example  Dockerfile  README.md  docker-compose.yml  go.mod
admin-backend/cmd/server/: main.go
admin-backend/docs/: docs.go  swagger.json  swagger.yaml
admin-backend/utils/: multi_logger.go
admin-frontend/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
admin-frontend/src/: main.ts
cli/: Cargo.toml  README.md  package.json
cli/src/: api.ts  config.ts  index.ts  language-mapping.ts  main.rs  scanner.ts  types.ts  ui.ts
cli/src/api/: client.rs  mod.rs
cli/src/cli/: mod.rs
cli/src/cli/commands/: import_cmd.rs  mod.rs  sync_cmd.rs
cli/src/commands/: import.ts  sync.ts
cli/src/core/: config.rs  flatten.rs  language_mapping.rs  mod.rs  scanner.rs
cli/src/ui/: mod.rs  progress.rs  spinner.rs
deploy/: deploy.sh
deploy/nginx/: Caddyfile
docs/: index.md
docs/.vitepress/: config.mts
docs/api/: authentication.md  endpoints.md  overview.md
docs/architecture/: cli.md  overview.md
docs/deployment/: docker.md
docs/guide/: best-practices.md  cli-guide.md  getting-started.md  machine-translation.md  project-guide.md  quick-start.md  team-collaboration.md  translation-guide.md
landing/: .gitignore  index.html  package.json  postcss.config.js  script.js  translations.js  vite.config.js
landing/public/: style.css  translations.js
(+78 files in other folders)
